[gd_scene load_steps=7 format=2]

[ext_resource path="res://Cell.gd" type="Script" id=1]
[ext_resource path="res://Assets/bomb_busted.png" type="Texture" id=2]
[ext_resource path="res://Assets/flag.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.45098, 0.392157, 0.392157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.45098, 0.392157, 0.392157, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.45098, 0.392157, 0.392157, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[node name="Cell" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_right = 64.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -32.0
margin_bottom = -32.0
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mine" type="Sprite" parent="."]
visible = false
position = Vector2( 32, 32 )
scale = Vector2( 1.00001, 1 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_right = 64.0
margin_bottom = 64.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flag" type="Sprite" parent="Button"]
visible = false
position = Vector2( 31.8358, 31.8868 )
scale = Vector2( 0.890835, 0.892374 )
texture = ExtResource( 3 )

[connection signal="mouse_entered" from="Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
